PMM-2816 Fix spinner layout issues

--- a/src/app/global-styles/grid-tables.scss
+++ b/src/app/global-styles/grid-tables.scss
@@ -82,6 +82,10 @@
   grid-template-columns: 1.5fr 1fr 6fr 2fr .85fr;
 }
 
+.grid-table__row--instances > *:last-child {
+  justify-content: space-between;
+}
+
 .grid-table__row--connect-instances {
   grid-template-columns: 2.5fr 6fr 2.85fr;
 }
